<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/chatBackArrowIv"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:foreground="@drawable/ripple"
        android:src="@drawable/back_arrow_img"
        android:tint="@color/arrow_tint_color" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_above="@+id/uploadDetailsBtn"
        android:layout_below="@+id/chatBackArrowIv"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.example.gogasrider.Customs.BoldText
                android:id="@+id/uploadImageTv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/uploadImages"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:transitionName="setUpYourProfileTv" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/montserrat"
                android:hint="@string/noOfGallon"
                android:paddingStart="@dimen/_6sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginStart="@dimen/_15sdp"

                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/upload_img" />


        </LinearLayout>


    </ScrollView>

    <com.example.gogasrider.Customs.ThinText
        android:id="@+id/uploadDetailsBtn"
        android:layout_width="match_parent"

        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/buyTanksTv"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/yellow_btn_bg"
        android:gravity="center"
        android:text="@string/uploadDetails"
        android:textColor="@android:color/white"
        android:transitionName="uploadIv" />
</RelativeLayout>


